--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^7.0.1",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "prisma": "^7.0.1",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
