--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Puerto del servidor  
 PORT=3001
-  
-# JWT Secret (genera uno seguro para produccion)  
+# Base de Datos (Supabase / PostgreSQL)
+# Formato: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_URL=postgresql://postgres:password@db.supabase.co:5432/postgres
 # Puedes generar uno con: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"  
 JWT_SECRET=tu_secret_jwt_super_seguro_aqui  
   
