--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:fix-roles": "node scripts/fix-roles.js",
+    "prisma:seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
