--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "plataforma_resrvas_backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
+    "build": "prisma generate",
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
